# vivia

./: .astyle  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  setupDevel.sh.in  vgExport.cmake  vgVersion.cmake
Applications/: CMakeLists.txt
Applications/Viqui/: CMakeLists.txt  classifierQuery.ui  configure.ui  main.cxx  predefinedQuery.ui  query.ui  regionEdit.ui  resultFilter.ui  resultInfo.ui  viqui.ui  vqApplication.cxx  vqApplication.h  vqArchiveVideoSource.cxx  vqArchiveVideoSource.h  vqClassifierQueryDialog.cxx  vqClassifierQueryDialog.h  vqConfigureDialog.cxx  vqConfigureDialog.h  vqContour.cxx  vqContour.h  vqCore.cxx  vqCore.h  vqDebug.cxx  vqDebug.h  vqEventInfo.cxx  vqEventInfo.h  vqPredefinedQueryCache.cxx  vqPredefinedQueryCache.h  vqPredefinedQueryCachePrivate.h  vqPredefinedQueryDialog.cxx  vqPredefinedQueryDialog.h  vqQueryDialog.cxx  vqQueryDialog.h  vqQueryParser.cxx  vqQueryParser.h  vqQueryVideoPlayer.cxx  vqQueryVideoPlayer.h  vqRegionEditDialog.cxx  vqRegionEditDialog.h  vqResultFilter.cxx  (+38 more)
Applications/VpView/: CMakeLists.txt  main.cxx  qtInformaticsDialog.ui  qtNormalcyDialog.ui  qtRenderWindowDialog.ui  vpActivityConfig.cxx  vpActivityConfig.h  vpActivityIO.cxx  vpActivityIO.h  vpAnnotation.cxx  vpAnnotation.h  vpApplication.cxx  vpApplication.h  vpAttributeConfig.cxx  vpAttributeConfig.h  vpBoundingRegion.h  vpBox.cxx  vpBox.h  vpComputeColorRangeDialog.cxx  vpComputeColorRangeDialog.h  vpComputeColorRangeDialog.ui  vpConfigUtils.cxx  vpConfigUtils.h  vpConfigure.ui  vpConfigureDialog.cxx  vpConfigureDialog.h  vpContour.cxx  vpContour.h  vpCreateEventDialog.cxx  vpCreateEventDialog.h  vpCreateEventDialog.ui  vpDBConnection.h  vpDBSessionMetaData.h  vpEditTrackTypesDialog.cxx  vpEditTrackTypesDialog.h  vpEditTrackTypesDialog.ui  vpEntityConfig.h  vpEntityConfigWidget.cxx  vpEntityConfigWidget.h  vpEventConfig.cxx  (+181 more)
Applications/VsPlay/: CMakeLists.txt  main.cxx  vsVersion.cmake  vsVersion.h.in
Applications/Web/: CMakeLists.txt
CMake/InstallRules/: CMakeLists.txt
Documentation/User Manuals/: CMakeLists.txt  default.css  vgCreateManual.py.in  vsPlay.rst
Examples/: CMakeLists.txt  GenerateBeachTestData.cxx  RenderVolumeWithImageActor.cxx  TestImageIcon.cxx
Examples/LoadJP2/: loadJP2.cxx
Libraries/: CMakeLists.txt
Libraries/QtExtensions/: CMakeLists.txt  qteVersion.cmake  qteVersion.h.in
Libraries/QtTestingSupport/: CMakeLists.txt  pqCoreTestUtility.cxx  pqCoreTestUtility.h  pqFileDialog.h  pqFileDialogEventPlayer.cxx  pqFileDialogEventPlayer.h  pqFileDialogEventTranslator.cxx  pqFileDialogEventTranslator.h  pqInvokeMethodEventPlayer.cxx  pqInvokeMethodEventPlayer.h  pqQDialogButtonBoxEventPlayer.cxx  pqQDialogButtonBoxEventPlayer.h  pqQDialogButtonBoxEventTranslator.cxx  pqQDialogButtonBoxEventTranslator.h  pqQVTKWidgetEventPlayer.cxx  pqQVTKWidgetEventPlayer.h  pqQVTKWidgetEventTranslator.cxx  pqQVTKWidgetEventTranslator.h  pqQteDoubleSliderEventPlayer.cxx  pqQteDoubleSliderEventPlayer.h  pqQteDoubleSliderEventTranslator.cxx  pqQteDoubleSliderEventTranslator.h  pqVgMixerEventPlayer.cxx  pqVgMixerEventPlayer.h  pqVgMixerEventTranslator.cxx  pqVgMixerEventTranslator.h  pqXMLEventObserver.cxx  pqXMLEventObserver.h  pqXMLEventSource.cxx  pqXMLEventSource.h
Libraries/QtVgCommon/: CMakeLists.txt  qtMap.h  qtMapImpl.h  vgColor.cxx  vgColor.h  vgDebug.h  vgFileDialog.h  vgGeoUtil.cxx  vgGeoUtil.h  vgPluginLoader.cxx  vgPluginLoader.h  vgPluginPaths.cxx.in  vgRegionKeyframe.cxx  vgRegionKeyframe.h  vgStringLiteral.h  vgSwatchCache.cxx  vgSwatchCache.h  vgTime.h  vgTimeBase.cxx  vgTimeBase.h  vgTimeMap.h  vgUnixTime.h
Libraries/QtVgWidgets/: CMakeLists.txt  ctkRangeSlider.cpp  ctkRangeSlider.h  vgAboutAction.cxx  vgAboutAction.h  vgAboutDialog.cxx  vgAboutDialog.h  vgAboutDialog.ui  vgApplication.cxx  vgApplication.h  vgFrameScrubber.cxx  vgFrameScrubber.h  vgFrameSpinBox.cxx  vgFrameSpinBox.h  vgMixerDrawer.cxx  vgMixerDrawer.h  vgMixerItem.cxx  vgMixerItem.h  vgMixerWidget.cxx  vgMixerWidget.h  vgTextEditDialog.cxx  vgTextEditDialog.h  vgTextEditDialog.ui  vgUserManualAction.cxx  vgUserManualAction.h  vgVideoScrubber.cxx  vgVideoScrubber.h
Libraries/VgCommon/: CMakeLists.txt  typesystem.xml  vgAbstractFactory.h  vgActivityType.cxx  vgActivityType.h  vgAttributeSet.cxx  vgAttributeSet.h  vgCheckArg.h  vgEntityType.cxx  vgEntityType.h  vgEventType.cxx  vgEventType.h  vgFingerprint.cxx.in  vgFingerprint.h  vgFlags.h  vgGeoTypes.h  vgGeodesy.cxx  vgGeodesy.h  vgMatrix.h  vgNamespace.h  vgPointerInt.h  vgRange.h  vgStringUtils.h  vgTimeStamp.h  vgTrackType.h  vgTypes.h  vgUtil.h
Libraries/VgDataFramework/: CMakeLists.txt  index.dox  node_types.dox  selectors.dox  typesystem.xml  updates.dox  vdfAbstractEventNode.h  vdfAbstractQueryResultSetNode.h  vdfAbstractQuerySessionNode.cxx  vdfAbstractQuerySessionNode.h  vdfAbstractTrackNode.h  vdfArchiveSourceInfo.h  vdfArchiveSourceInterface.h  vdfDataReader.cxx  vdfDataReader.h  vdfDataSource.cxx  vdfDataSource.h  vdfDataSourceInterface.h  vdfEventReader.cxx  vdfEventReader.h  vdfEventSource.cxx  vdfEventSource.h  vdfNamespace.h  vdfNodeBase.cxx  vdfNodeBase.h  vdfNodeProxy.cxx  vdfNodeProxy.h  vdfQuerySessionNode.cxx  vdfQuerySessionNode.h  vdfSelector.cxx  vdfSelector.h  vdfSelectorSet.cxx  vdfSelectorSet.h  vdfSourceService.cxx  vdfSourceService.h  vdfTemporalSelector.cxx  vdfTemporalSelector.h  vdfThreadedArchiveSource.cxx  vdfThreadedArchiveSource.h  vdfTrackData.h  (+8 more)
Libraries/VgGuiFramework/: CMakeLists.txt  contextMenu.ui  typesystem.xml  vgfContextMenu.cxx  vgfContextMenu.h  vgfItemModel.cxx  vgfItemModel.h  vgfItemReference.h  vgfMetaTypes.h  vgfNamespace.h  vgfNoteTreeModel.cxx  vgfNoteTreeModel.h  vgfUtil.cxx
Libraries/VgVideo/: CMakeLists.txt  vgFilRecord.cxx  vgFilRecord.h  vgIStream.cxx  vgIStream.h  vgImage.cxx  vgImage.h  vgKwaArchive.cxx  vgKwaArchive.h  vgKwaFrameMetadata.cxx  vgKwaFrameMetadata.h  vgKwaUtil.cxx  vgKwaUtil.h  vgKwaUtilPrivate.h  vgKwaVideoClip.cxx  vgKwaVideoClip.h  (+9 more)
Plugins/: CMakeLists.txt
Tools/: CMakeLists.txt
Web/: CMakeLists.txt  vgweb.sh.in
(+1042 files in other folders)
